--- a/SpeechMe/ui/speechpad.ui
+++ b/SpeechMe/ui/speechpad.ui
@@ -45,6 +45,9 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="isolatedButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Isolated</string>
        </property>
@@ -52,6 +55,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="contButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>Continuous</string>
        </property>
