--- a/SpeechMe/ui/SpeechWeb.ui
+++ b/SpeechMe/ui/SpeechWeb.ui
@@ -17,13 +17,6 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="backButton">
-       <property name="text">
-        <string>&lt;&lt;</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -66,7 +59,7 @@
      <item>
       <widget class="QPushButton" name="speechButton">
        <property name="text">
-        <string>Speech...</string>
+        <string>o))</string>
        </property>
       </widget>
      </item>
