--- a/SpeechMe/ui/config.ui
+++ b/SpeechMe/ui/config.ui
@@ -61,6 +61,32 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>Samprate</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="sampRateCombo">
+       <item>
+        <property name="text">
+         <string>8000</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>11050</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>16000</string>
+        </property>
+       </item>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
