Saving settings for config file and server port (QSettings)

--- a/SpeechMe/ui/config.ui
+++ b/SpeechMe/ui/config.ui
@@ -123,4 +123,8 @@
  </tabstops>
  <resources/>
  <connections/>
+ <slots>
+  <slot>on_configFile_textChanged(QString)</slot>
+  <slot>on_portSphinBox_changed(int)</slot>
+ </slots>
 </ui>
